--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,29 +2,49 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    // "rootDir": "./src",
     "outDir": "./dist",
-
     // Environment Settings
-    "module": "commonjs",
-    "target": "ES2020",
+    // See also https://aka.ms/tsconfig/module
+    "module": "ESNext",
     "moduleResolution": "node",
-    "types": ["node"],
-    "lib": ["ES2020"],
-    "esModuleInterop": true,
-
+    "target": "ES2023",
+    "ignoreDeprecations": "6.0",
+    "types": [],
+    // For nodejs:
+    // "lib": ["esnext"],
+    // "types": ["node"],
+    // and npm install -D @types/node
     // Other Outputs
     "sourceMap": true,
-
+    "declaration": true,
+    "declarationMap": true,
     // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-
+    // Style Options
+    // "noImplicitReturns": true,
+    // "noImplicitOverride": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noPropertyAccessFromIndexSignature": true,
     // Recommended Options
     "strict": true,
+    // "jsx": "react-jsx",
+    // "verbatimModuleSyntax": true,
     "isolatedModules": true,
+    "noUncheckedSideEffectImports": true,
+    "moduleDetection": "force",
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "esModuleInterop": true,
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "generated/prisma"
+  ]
 }
