--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon --watch src --watch .env --ext ts,json --exec tsx src/index.ts",
     "dev:poll": "nodemon --watch src --watch .env --ext ts,json --legacy-watch --exec tsx src/index.ts",
     "build": "prisma generate && tsup src/index.ts --format esm --platform node --target node20 --outDir api --external pg-native",
-    "start": "node --import tsx src/index.ts",
+    "start": "node api/index.js",
     "seed:admin": "tsx src/scripts/seedAdmin.ts",
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate"
@@ -17,27 +17,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/hpp": "^0.2.6",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^25.2.1",
     "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.16.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^25.2.0",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.17",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
@@ -48,7 +46,6 @@
     "prisma": "^7.3.0",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
     "zod": "^3.24.1"
   }
 }
