--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "dev:poll": "nodemon --watch src --watch .env --ext ts,json --legacy-watch --exec tsx src/index.ts",
     "build": "prisma generate && tsup src/index.ts --format esm --platform node --target node20 --outDir api --external pg-native",
     "start": "node api/index.js",
+    "start:prod": "prisma migrate deploy && node api/index.js",
     "seed:admin": "tsx src/scripts/seedAdmin.ts",
     "seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "docker:build": "docker build -t skillbridge-server .",
+    "docker:run": "docker run -p 9000:9000 skillbridge-server",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "docker:prod": "docker-compose up --build -d"
   },
   "keywords": [],
   "author": "",
