--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,35 @@ services:
       - .:/app
       - /app/node_modules
 
+  prom-server:
+    image: prom/prometheus
+    container_name: skillbridge-prometheus
+    restart: unless-stopped
+    ports:
+      - "9091:9090"
+    volumes:
+      - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - skillbridge-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: skillbridge-grafana
+    restart: unless-stopped
+    ports:
+      - "4000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prom-server
+    networks:
+      - skillbridge-network
+
 volumes:
   postgres_data:
+  grafana_data:
 
 networks:
   skillbridge-network:
