--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
     "prisma": "^7.3.0",
+    "prom-client": "^15.1.3",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "zod": "^3.24.1"
